Remove version tag from jar.